<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateNewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/post_type"/>

        <RadioGroup
            android:id="@+id/post_type_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lost_button"
                android:text="@string/lost_type"
                android:checked="true"
                style="@style/radioButtonStyle"/>
            <RadioButton
                android:id="@+id/found_button"
                android:text="@string/found_type"
                style="@style/radioButtonStyle"/>

        </RadioGroup>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_field"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/name_field"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:paddingLeft="5dp"
        android:background="@drawable/edit_text_border"
        android:inputType="text|textMultiLine"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_field"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/phone_field"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:paddingLeft="5dp"
        android:textSize="15sp"
        android:background="@drawable/edit_text_border"
        android:inputType="text"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_field"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:inputType="text|textMultiLine"/>

    <EditText
        android:id="@+id/description_field"
        android:layout_width="380dp"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="5dp"
        android:textSize="15sp"
        android:background="@drawable/edit_text_border"
        android:inputType="text"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_field"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/date_field"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:paddingLeft="5dp"
        android:textSize="15sp"
        android:background="@drawable/edit_text_border"
        android:inputType="text"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_field"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/location_field"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:paddingLeft="5dp"
        android:textSize="15sp"
        android:background="@drawable/edit_text_border"
        android:inputType="text|textMultiLine"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:textSize="20sp"
        android:layout_gravity="center"/>

</LinearLayout>